--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<h1>Tu paies des impôts. Mais que voudrais-tu qu'ils soutiennent ?</h1>
+<!DOCTYPE html>
+<html lang="fr">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<h2>Tu as le pouvoir de décider du type d'action que tu voudrais que ton argent finance.</h2>
+		<title>Décider mes impôts</title>
+		<meta name="description" content="Tu as le pouvoir de décider du type d'action que tu voudrais que ton argent finance.">
+	</head>
 
-<p>En payant un peu plus cher, tu peux régler tes impôts directement auprès d'associations qui mènent des actions qui font sens pour toi.</p>
+	<body>
+		<h1>Tu paies des impôts. Mais que voudrais-tu qu'ils soutiennent ?</h1>
 
-<h3>Comment ça marche ?</h3>
-<p>L'<a href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000006191957&cidTexte=LEGITEXT000006069577">article 200</a> du code général des impôts permet de <a href="https://www.service-public.fr/particuliers/vosdroits/F426">déduire</a> du montant de ses impôts une partie des dons aux associations à but non lucratif, aux syndicats, aux partis politiques. <a href="https://github.com/MattiSG/decider-mes-impots#moyens">Plus de détails.</a></p>
+		<h2>Tu as le pouvoir de décider du type d'action que tu voudrais que ton argent finance.</h2>
 
-<h3>Quelles sont les limites ?</h3>
-<p>Tu peux décider de l'attribution de <em>la totalité</em> de tes impôts si tu gagnes (seul, pas en tant que foyer) moins de 56 446 € imposables annuels. Au-delà, une partie est systématiquement allouée à l'État. Mais, comme tu vois, ça fait de la marge 😉 <a href="https://github.com/MattiSG/decider-mes-impots#contraintes">Plus de détails.</a></p>
+		<p>En payant un peu plus cher, tu peux régler tes impôts directement auprès d'associations qui mènent des actions qui font sens pour toi.</p>
+
+		<h3>Comment ça marche ?</h3>
+		<p>L'<a href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000006191957&cidTexte=LEGITEXT000006069577">article 200</a> du code général des impôts permet de <a href="https://www.service-public.fr/particuliers/vosdroits/F426">déduire</a> du montant de ses impôts une partie des dons aux associations à but non lucratif, aux syndicats, aux partis politiques. <a href="https://github.com/MattiSG/decider-mes-impots#moyens">Plus de détails.</a></p>
+
+		<h3>Quelles sont les limites ?</h3>
+		<p>Tu peux décider de l'attribution de <em>la totalité</em> de tes impôts si tu gagnes (seul, pas en tant que foyer) moins de 56 446 € imposables annuels. Au-delà, une partie est systématiquement allouée à l'État. Mais, comme tu vois, ça fait de la marge 😉 <a href="https://github.com/MattiSG/decider-mes-impots#contraintes">Plus de détails.</a></p>
+	</body>
+</html>
