Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
 
 		<h3>Quelles sont les limites ?</h3>
 		<p>Tu peux décider de l'attribution de <em>la totalité</em> de tes impôts si tu gagnes (seul, pas en tant que foyer) moins de 56 446 € imposables annuels. Au-delà, une partie est systématiquement allouée à l'État. Mais, comme tu vois, ça fait de la marge 😉 <a href="https://github.com/MattiSG/decider-mes-impots#contraintes">Plus de détails.</a></p>
+
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-83601648-1', 'auto');
+			ga('send', 'pageview');
+		</script>
 	</body>
 </html>
