Add basic styles

--- a/index.html
+++ b/index.html
@@ -6,58 +6,68 @@
 
 		<title>Décider mes impôts</title>
 		<meta name="description" content="Tu as le pouvoir de décider du type d'action que tu voudrais que ton argent finance.">
+
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 
 	<body>
-		<h1>Tu paies des impôts. Mais que voudrais-tu qu'ils soutiennent ?</h1>
+		<header>
+			<h1>Tu paies des impôts. Mais que voudrais-tu qu'ils soutiennent ?</h1>
+		</header>
 
-		<p>Si tu ne fais pas de choix, voilà ce à quoi sera employé ton argent.</p>
+		<main>
+			<h2>Si tu ne fais pas de choix, voilà ce à quoi sera employé ton argent.</h2>
 
-		<table>
-			<caption>Répartition du budget 2016 de l'État. <small><a href="http://proxy-pubminefi.diffusion.finances.gouv.fr/pub/document/18/19765.pdf" title="Source : « Chiffres clés du projet de loi de finances 2016, ministère des finances ».">Source</a>, <a href="data/plf.csv" title="Données : extraction manuelle du PDF.">données</a>.</small></caption>
-			<tbody>
-				<tr><th>Action extérieure de l’État</th><td>1,38 %</td></tr>
-				<tr><th>Administration générale et territoriale de l’État</th><td>0,88 %</td></tr>
-				<tr><th>Agriculture, alimentation, forêt et affaires rurales</th><td>1,13 %</td></tr>
-				<tr><th>Aide publique au développement</th><td>1,18 %</td></tr>
-				<tr><th>Anciens combattants, mémoire et liens avec la nation</th><td>1,18 %</td></tr>
-				<tr><th>Conseil et contrôle de l’État</th><td>0,23 %</td></tr>
-				<tr><th>Culture</th><td>1,15 %</td></tr>
-				<tr><th>Défense</th><td>14,35 %</td></tr>
-				<tr><th>Direction de l’action du Gouvernement</th><td>0,55 %</td></tr>
-				<tr><th>Écologie, développement et mobilité durables</th><td>2,94 %</td></tr>
-				<tr><th>Économie</th><td>0,66 %</td></tr>
-				<tr><th>Égalité des territoires et logement</th><td>8,00 %</td></tr>
-				<tr><th>Engagements financiers de l’État</th><td>0,34 %</td></tr>
-				<tr><th>Enseignement scolaire</th><td>21,71 %</td></tr>
-				<tr><th>Gestion des finances publiques et des ressources humaines</th><td>3,72 %</td></tr>
-				<tr><th>Immigration, asile et intégration</th><td>0,32 %</td></tr>
-				<tr><th>Justice</th><td>2,88 %</td></tr>
-				<tr><th>Médias, livre et industries culturelles</th><td>0,27 %</td></tr>
-				<tr><th>Outre-mer</th><td>0,91 %</td></tr>
-				<tr><th>Politique des territoires</th><td>0,32 %</td></tr>
-				<tr><th>Pouvoirs publics</th><td>0,45 %</td></tr>
-				<tr><th>Provisions</th><td>0,02 %</td></tr>
-				<tr><th>Recherche et enseignement supérieur</th><td>11,59 %</td></tr>
-				<tr><th>Régimes sociaux et de retraite</th><td>2,86 %</td></tr>
-				<tr><th>Relations avec les collectivités territoriales</th><td>1,34 %</td></tr>
-				<tr><th>Santé</th><td>0,57 %</td></tr>
-				<tr><th>Sécurités</th><td>5,54 %</td></tr>
-				<tr><th>Solidarité, insertion et égalité des chances</th><td>8,16 %</td></tr>
-				<tr><th>Sport, jeunesse et vie associative</th><td>0,28 %</td></tr>
-				<tr><th>Travail et emploi</th><td>5,09 %</td></tr>
-			</tbody>
-		</table>
+			<table>
+				<tbody>
+					<tr><th>Action extérieure de l’État</th><td>1,38 %</td></tr>
+					<tr><th>Administration générale et territoriale de l’État</th><td>0,88 %</td></tr>
+					<tr><th>Agriculture, alimentation, forêt et affaires rurales</th><td>1,13 %</td></tr>
+					<tr><th>Aide publique au développement</th><td>1,18 %</td></tr>
+					<tr><th>Anciens combattants, mémoire et liens avec la nation</th><td>1,18 %</td></tr>
+					<tr><th>Conseil et contrôle de l’État</th><td>0,23 %</td></tr>
+					<tr><th>Culture</th><td>1,15 %</td></tr>
+					<tr><th>Défense</th><td>14,35 %</td></tr>
+					<tr><th>Direction de l’action du Gouvernement</th><td>0,55 %</td></tr>
+					<tr><th>Écologie, développement et mobilité durables</th><td>2,94 %</td></tr>
+					<tr><th>Économie</th><td>0,66 %</td></tr>
+					<tr><th>Égalité des territoires et logement</th><td>8,00 %</td></tr>
+					<tr><th>Engagements financiers de l’État</th><td>0,34 %</td></tr>
+					<tr><th>Enseignement scolaire</th><td>21,71 %</td></tr>
+					<tr><th>Gestion des finances publiques et des ressources humaines</th><td>3,72 %</td></tr>
+					<tr><th>Immigration, asile et intégration</th><td>0,32 %</td></tr>
+					<tr><th>Justice</th><td>2,88 %</td></tr>
+					<tr><th>Médias, livre et industries culturelles</th><td>0,27 %</td></tr>
+					<tr><th>Outre-mer</th><td>0,91 %</td></tr>
+					<tr><th>Politique des territoires</th><td>0,32 %</td></tr>
+					<tr><th>Pouvoirs publics</th><td>0,45 %</td></tr>
+					<tr><th>Provisions</th><td>0,02 %</td></tr>
+					<tr><th>Recherche et enseignement supérieur</th><td>11,59 %</td></tr>
+					<tr><th>Régimes sociaux et de retraite</th><td>2,86 %</td></tr>
+					<tr><th>Relations avec les collectivités territoriales</th><td>1,34 %</td></tr>
+					<tr><th>Santé</th><td>0,57 %</td></tr>
+					<tr><th>Sécurités</th><td>5,54 %</td></tr>
+					<tr><th>Solidarité, insertion et égalité des chances</th><td>8,16 %</td></tr>
+					<tr><th>Sport, jeunesse et vie associative</th><td>0,28 %</td></tr>
+					<tr><th>Travail et emploi</th><td>5,09 %</td></tr>
+				</tbody>
+				<caption>Répartition du budget 2016 de l'État. <small><a href="http://proxy-pubminefi.diffusion.finances.gouv.fr/pub/document/18/19765.pdf" title="Source : « Chiffres clés du projet de loi de finances 2016, ministère des finances ».">Source</a>, <a href="data/plf.csv" title="Données : extraction manuelle du PDF.">données</a>.</small></caption>
+			</table>
 
-		<h2>Tu as le pouvoir de décider du type d'action que tu voudrais que ton argent finance.</h2>
+			<h2>Tu as le pouvoir de décider des actions que ton argent finance.</h2>
 
-		<p>En payant un peu plus cher, tu peux régler tes impôts directement auprès d'associations qui mènent des actions qui font sens pour toi.</p>
+			<p>En payant un peu plus cher, tu peux régler tes impôts directement auprès d'associations qui mènent des actions qui font sens pour toi.</p>
+		</main>
 
-		<h3>Comment ça marche ?</h3>
-		<p>L'<a href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000006191957&cidTexte=LEGITEXT000006069577">article 200</a> du code général des impôts permet de <a href="https://www.service-public.fr/particuliers/vosdroits/F426">déduire</a> du montant de ses impôts une partie des dons aux associations à but non lucratif, aux syndicats, aux partis politiques. <a href="https://github.com/MattiSG/decider-mes-impots#moyens">Plus de détails.</a></p>
+		<section>
+			<h3>Comment ça marche ?</h3>
+			<p>L’<a href="https://www.legifrance.gouv.fr/affichCode.do?idSectionTA=LEGISCTA000006191957&cidTexte=LEGITEXT000006069577">article 200</a> du code général des impôts permet de <a href="https://www.service-public.fr/particuliers/vosdroits/F426">déduire</a> du montant de ses impôts une partie des dons aux associations à but non lucratif, aux syndicats, aux partis politiques.</p>
+			<small>En savoir plus sur les <a href="https://github.com/MattiSG/decider-mes-impots#moyens">moyens d'action</a>.</small>
 
-		<h3>Quelles sont les limites ?</h3>
-		<p>Tu peux décider de l'attribution de <em>la totalité</em> de tes impôts si tu gagnes (seul, pas en tant que foyer) moins de 56 446 € imposables annuels. Au-delà, une partie est systématiquement allouée à l'État. Mais, comme tu vois, ça fait de la marge 😉 <a href="https://github.com/MattiSG/decider-mes-impots#contraintes">Plus de détails.</a></p>
+			<h3>Quelles sont les limites ?</h3>
+			<p>Tu peux décider de l'attribution de la totalité de tes impôts si tu gagnes (seul, pas en tant que foyer) jusqu’à 56 446 € imposables annuels. Au-delà, une partie est systématiquement affectée au budget de l'État. Mais comme tu vois, ça fait de la marge 😉</p>
+			<small>En savoir plus sur les <a href="https://github.com/MattiSG/decider-mes-impots#contraintes">contraintes</a>.</small>
+		</section>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
