--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
 			<small>En savoir plus sur les <a href="https://github.com/MattiSG/decider-mes-impots#contraintes">contraintes</a>.</small>
 		</section>
 
+		<footer>
+			Fait en quelques heures par des gens qui pourraient être toi. – <a href="https://github.com/MattiSG/decider-mes-impots">Améliorer ce site</a> — Copain : <a href="http://comment-voter.fr">Comment voter ?</a> — <a href="mailto:contact@comment-voter.fr?subject=D%c3%a9cider%20mes%20imp%c3%b4ts">Contact</a>
+		</footer>
+
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
