--- a/index.html
+++ b/index.html
@@ -18,43 +18,43 @@
 		<main>
 			<h2>Si tu ne fais pas de choix, voilà ce à quoi sera employé ton argent.</h2>
 
-			<canvas>
-				<table>
-					<tbody>
-						<tr><th>Action extérieure de l’État</th><td>1,38 %</td></tr>
-						<tr><th>Administration générale et territoriale de l’État</th><td>0,88 %</td></tr>
-						<tr><th>Agriculture, alimentation, forêt et affaires rurales</th><td>1,13 %</td></tr>
-						<tr><th>Aide publique au développement</th><td>1,18 %</td></tr>
-						<tr><th>Anciens combattants, mémoire et liens avec la nation</th><td>1,18 %</td></tr>
-						<tr><th>Conseil et contrôle de l’État</th><td>0,23 %</td></tr>
-						<tr><th>Culture</th><td>1,15 %</td></tr>
-						<tr><th>Défense</th><td>14,35 %</td></tr>
-						<tr><th>Direction de l’action du Gouvernement</th><td>0,55 %</td></tr>
-						<tr><th>Écologie, développement et mobilité durables</th><td>2,94 %</td></tr>
-						<tr><th>Économie</th><td>0,66 %</td></tr>
-						<tr><th>Égalité des territoires et logement</th><td>8,00 %</td></tr>
-						<tr><th>Engagements financiers de l’État</th><td>0,34 %</td></tr>
-						<tr><th>Enseignement scolaire</th><td>21,71 %</td></tr>
-						<tr><th>Gestion des finances publiques et des ressources humaines</th><td>3,72 %</td></tr>
-						<tr><th>Immigration, asile et intégration</th><td>0,32 %</td></tr>
-						<tr><th>Justice</th><td>2,88 %</td></tr>
-						<tr><th>Médias, livre et industries culturelles</th><td>0,27 %</td></tr>
-						<tr><th>Outre-mer</th><td>0,91 %</td></tr>
-						<tr><th>Politique des territoires</th><td>0,32 %</td></tr>
-						<tr><th>Pouvoirs publics</th><td>0,45 %</td></tr>
-						<tr><th>Provisions</th><td>0,02 %</td></tr>
-						<tr><th>Recherche et enseignement supérieur</th><td>11,59 %</td></tr>
-						<tr><th>Régimes sociaux et de retraite</th><td>2,86 %</td></tr>
-						<tr><th>Relations avec les collectivités territoriales</th><td>1,34 %</td></tr>
-						<tr><th>Santé</th><td>0,57 %</td></tr>
-						<tr><th>Sécurités</th><td>5,54 %</td></tr>
-						<tr><th>Solidarité, insertion et égalité des chances</th><td>8,16 %</td></tr>
-						<tr><th>Sport, jeunesse et vie associative</th><td>0,28 %</td></tr>
-						<tr><th>Travail et emploi</th><td>5,09 %</td></tr>
-					</tbody>
-					<caption>Répartition du budget 2016 de l'État. <small><a href="http://proxy-pubminefi.diffusion.finances.gouv.fr/pub/document/18/19765.pdf" title="Source : « Chiffres clés du projet de loi de finances 2016, ministère des finances ».">Source</a>, <a href="data/plf.csv" title="Données : extraction manuelle du PDF.">données</a>.</small></caption>
-				</table>
-			</canvas>
+			<svg></svg>
+
+			<table>
+				<tbody>
+					<tr><th>Action extérieure de l’État</th><td>1,38 %</td></tr>
+					<tr><th>Administration générale et territoriale de l’État</th><td>0,88 %</td></tr>
+					<tr><th>Agriculture, alimentation, forêt et affaires rurales</th><td>1,13 %</td></tr>
+					<tr><th>Aide publique au développement</th><td>1,18 %</td></tr>
+					<tr><th>Anciens combattants, mémoire et liens avec la nation</th><td>1,18 %</td></tr>
+					<tr><th>Conseil et contrôle de l’État</th><td>0,23 %</td></tr>
+					<tr><th>Culture</th><td>1,15 %</td></tr>
+					<tr><th>Défense</th><td>14,35 %</td></tr>
+					<tr><th>Direction de l’action du Gouvernement</th><td>0,55 %</td></tr>
+					<tr><th>Écologie, développement et mobilité durables</th><td>2,94 %</td></tr>
+					<tr><th>Économie</th><td>0,66 %</td></tr>
+					<tr><th>Égalité des territoires et logement</th><td>8,00 %</td></tr>
+					<tr><th>Engagements financiers de l’État</th><td>0,34 %</td></tr>
+					<tr><th>Enseignement scolaire</th><td>21,71 %</td></tr>
+					<tr><th>Gestion des finances publiques et des ressources humaines</th><td>3,72 %</td></tr>
+					<tr><th>Immigration, asile et intégration</th><td>0,32 %</td></tr>
+					<tr><th>Justice</th><td>2,88 %</td></tr>
+					<tr><th>Médias, livre et industries culturelles</th><td>0,27 %</td></tr>
+					<tr><th>Outre-mer</th><td>0,91 %</td></tr>
+					<tr><th>Politique des territoires</th><td>0,32 %</td></tr>
+					<tr><th>Pouvoirs publics</th><td>0,45 %</td></tr>
+					<tr><th>Provisions</th><td>0,02 %</td></tr>
+					<tr><th>Recherche et enseignement supérieur</th><td>11,59 %</td></tr>
+					<tr><th>Régimes sociaux et de retraite</th><td>2,86 %</td></tr>
+					<tr><th>Relations avec les collectivités territoriales</th><td>1,34 %</td></tr>
+					<tr><th>Santé</th><td>0,57 %</td></tr>
+					<tr><th>Sécurités</th><td>5,54 %</td></tr>
+					<tr><th>Solidarité, insertion et égalité des chances</th><td>8,16 %</td></tr>
+					<tr><th>Sport, jeunesse et vie associative</th><td>0,28 %</td></tr>
+					<tr><th>Travail et emploi</th><td>5,09 %</td></tr>
+				</tbody>
+				<caption>Répartition du budget 2016 de l'État. <small><a href="http://proxy-pubminefi.diffusion.finances.gouv.fr/pub/document/18/19765.pdf" title="Source : « Chiffres clés du projet de loi de finances 2016, ministère des finances ».">Source</a>, <a href="data/plf.csv" title="Données : extraction manuelle du PDF.">données</a>.</small></caption>
+			</table>
 
 			<h2>Tu as le pouvoir de décider des actions que ton argent finance.</h2>
 
@@ -75,7 +75,7 @@
 			Fait en quelques heures par des gens qui pourraient être toi. – <a href="https://github.com/MattiSG/decider-mes-impots">Améliorer ce site</a> — Copain : <a href="http://comment-voter.fr">Comment voter ?</a> — <a href="mailto:contact@comment-voter.fr?subject=D%c3%a9cider%20mes%20imp%c3%b4ts">Contact</a>
 		</footer>
 
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/chart.js/2.2.1/Chart.min.js"></script>
+		<script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
 		<script type="text/javascript" src="js/chart.js"></script>
 
 		<script>
