Plot as a horizontal bar with c3

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="description" content="Tu as le pouvoir de décider du type d'action que tu voudrais que ton argent finance.">
 
 		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/c3/0.1.42/c3.css">
 	</head>
 
 	<body>
@@ -18,9 +19,7 @@
 		<main>
 			<h2>Si tu ne fais pas de choix, voilà ce à quoi sera employé ton argent.</h2>
 
-			<svg></svg>
-
-			<table>
+			<table id="chart">
 				<tbody>
 					<tr><th>Action extérieure de l’État</th><td>1,38 %</td></tr>
 					<tr><th>Administration générale et territoriale de l’État</th><td>0,88 %</td></tr>
@@ -76,6 +75,7 @@
 		</footer>
 
 		<script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/c3/0.1.42/c3.min.js"></script>
 		<script type="text/javascript" src="js/chart.js"></script>
 
 		<script>
