--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		</footer>
 
 		<script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/c3/0.1.42/c3.min.js"></script>
+		<script type="text/javascript" src="https://npmcdn.com/c3@0.4/c3.min.js"></script>
 		<script type="text/javascript" src="js/chart.js"></script>
 
 		<script>
