fixup! Update c3 to 0.4

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Tu as le pouvoir de décider du type d'action que tu voudrais que ton argent finance.">
 
 		<link rel="stylesheet" type="text/css" href="main.css">
-		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/c3/0.1.42/c3.css">
+		<link rel="stylesheet" type="text/css" href="https://npmcdn.com/c3@0.4/c3.css">
 	</head>
 
 	<body>
