--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Tu as le pouvoir de décider du type d'action que tu voudrais que ton argent finance.">
 
 		<link rel="stylesheet" type="text/css" href="main.css">
-		<link rel="stylesheet" type="text/css" href="https://npmcdn.com/c3@0.4/c3.css">
+		<link rel="stylesheet" type="text/css" href="lib/c3.min.css">
 	</head>
 
 	<body>
@@ -74,8 +74,8 @@
 			Fait en quelques heures par des gens qui pourraient être toi. – <a href="https://github.com/MattiSG/decider-mes-impots">Améliorer ce site</a> — Copain : <a href="http://comment-voter.fr">Comment voter ?</a> — <a href="mailto:contact@comment-voter.fr?subject=D%c3%a9cider%20mes%20imp%c3%b4ts">Contact</a>
 		</footer>
 
-		<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
-		<script type="text/javascript" src="https://npmcdn.com/c3@0.4/c3.min.js"></script>
+		<script type="text/javascript" src="lib/d3.v3.min.js"></script>
+		<script type="text/javascript" src="lib/c3.min.js"></script>
 		<script type="text/javascript" src="js/chart.js"></script>
 
 		<script>
